<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/navigation_artists"
    android:enabled="true"
    android:checked="true"
    android:icon="@drawable/ic_person"
    android:title="@string/menu_bottom_navigation_artists"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/navigation_songs"
    android:enabled="true"
    android:icon="@drawable/ic_music"
    android:title="@string/menu_bottom_navigation_songs"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/navigation_playlist"
    android:enabled="true"
    android:icon="@drawable/ic_playlist"
    android:title="@string/menu_bottom_navigation_playlist"
    app:showAsAction="ifRoom"/>
</menu>