<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <android.support.design.widget.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <include
      android:id="@+id/appbarSong"
      layout="@layout/appbar_song"/>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

      <TextView
        android:id="@+id/textViewModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/fontsize_title"
        android:visibility="visible"/>

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

  <android.support.v7.widget.CardView
    android:id="@+id/cardChangeTone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="214dp"
    android:layout_marginEnd="@dimen/card_padding_end"
    android:layout_gravity="end|bottom"
    android:visibility="invisible"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation_raised"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/space_small_views"
      android:paddingBottom="@dimen/space_small_views"
      android:paddingStart="@dimen/space_medium_views"
      android:paddingEnd="@dimen/space_medium_views"
      android:background="@color/white"
      android:fontFamily="sans-serif-medium"
      android:text="@string/change_tone_song_activity"
      android:textColor="@color/secondaryTextColor"
      />

  </android.support.v7.widget.CardView>


  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fabChangeTone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="206dp"
    android:layout_marginEnd="@dimen/fab_mini_margin"
    android:layout_gravity="end|bottom"
    app:fabSize="mini"
    app:layout_behavior="br.com.missao.cifrasus.utils.ScrollAwareFabBehavior"
    app:srcCompat="@drawable/ic_tone_change"
    />

  <android.support.v7.widget.CardView
    android:id="@+id/cardFontSize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="155dp"
    android:layout_marginEnd="@dimen/card_padding_end"
    android:layout_gravity="end|bottom"
    android:visibility="invisible"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation_raised"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/space_small_views"
      android:paddingBottom="@dimen/space_small_views"
      android:paddingStart="@dimen/space_medium_views"
      android:paddingEnd="@dimen/space_medium_views"
      android:background="@color/white"
      android:fontFamily="sans-serif-medium"
      android:text="@string/change_font_song_activity"
      android:textColor="@color/secondaryTextColor"
      />

  </android.support.v7.widget.CardView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fabFontSize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="148dp"
    android:layout_marginEnd="@dimen/fab_mini_margin"
    android:layout_gravity="end|bottom"
    app:fabSize="mini"
    app:srcCompat="@drawable/ic_format_size"
    />

  <android.support.v7.widget.CardView
    android:id="@+id/cardAddList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="98dp"
    android:layout_marginEnd="@dimen/card_padding_end"
    android:layout_gravity="end|bottom"
    android:visibility="invisible"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation_raised"
    >

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="@dimen/space_small_views"
      android:paddingBottom="@dimen/space_small_views"
      android:paddingStart="@dimen/space_medium_views"
      android:paddingEnd="@dimen/space_medium_views"
      android:background="@color/white"
      android:fontFamily="sans-serif-medium"
      android:text="@string/add_in_playlist_song_activity"
      android:textColor="@color/secondaryTextColor"
      />

  </android.support.v7.widget.CardView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fabAddList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="90dp"
    android:layout_marginEnd="@dimen/fab_mini_margin"
    android:layout_gravity="end|bottom"
    app:fabSize="mini"
    app:srcCompat="@drawable/ic_playlist_add"
    />

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fabOptions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_normal_margin"
    android:layout_gravity="end|bottom"
    app:fabSize="normal"
    app:srcCompat="@drawable/ic_add"
    />

  <FrameLayout
    android:id="@+id/frameBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteOpacity"
    android:clickable="true"
    android:elevation="5dp"
    android:visibility="gone"
    />

</android.support.design.widget.CoordinatorLayout>
